# thermal-software

./: .env.example  .env.production  .env.production.example  .gitignore  ADD_NEW_ANIONS_GUIDE.md  ALL_NBS_DATA_INCLUDED.md  CLEANUP_COMPLETE.md  COMPLETE_IMPLEMENTATION_STATUS.md  DOCUMENTATION_UPDATE_COMPLETE.md  ENRICHMENT_TROUBLESHOOTING.md  FINAL_ACTION_CHECKLIST.md  Hardnening calculation.html  IMPLEMENTATION_COMPLETE.md  MANIFEST.md  MANUAL_DATA_MERGE_COMPLETE.md  Makefile  NEW_ANIONS_IN_PROGRESS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_INDEX.md  PROJECT_ORGANIZATION.md  PROJECT_STATUS_UPDATE.md  QUICKSTART.md  README.md  READY_TO_ADD_ANIONS.md  READY_TO_TEST.md  REORGANIZATION_COMPLETE.md  SETUP.md  START_HERE.md  STATUS_COMPLETE.md  STEP2_COMPLETE.md  STEP3_COMPLETE.md  THERMOPHYSICAL_DATA_SPEC.md  add_new_anions_workflow.sh  compose.production.yml  compose.yaml  compose.yml  recuperator.html  test_config_loading.py  verify.sh
python/: .dockerignore  README.md  pyproject.toml
python/src/nasa_thermo/: __init__.py  nasa7_coeffs.py  nasa7_equation.py  nasa7_species.py  nasa9_coeffs.py  nasa9_equation.py  nasa9_range.py  nasa9_species.py  utils.py  writers.py
python/src/ocr/: README.md  __init__.py  config.py  document_builder.py  enhanced_table_detector.py  extractor.py  file_manager.py  graphics_extractor.py  image_processing.py  language_detector.py  (+3 more)
python/tests/: README.md  create_simple_test_images.py  test_display.py  test_document_extraction.py  test_graphics_extractor.py  test_ocr_direct.py  test_opencv.py  test_pipeline_exact.py  test_table_structure.py
(+1054 files in other folders)
