[tool.poetry]
name = "thermal-ocr-scripts"
version = "0.1.0"
description = "Utilities for Thermal Software"
authors = ["thermal-software <pavlo.zakhovalko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"

# OCR and Table Extraction (core)
pytesseract = "0.3.13"
pdf2image = "1.17.0"
Pillow = "12.1.0"
tabula-py = "2.10.0"

# Image / Numeric / Table extraction
opencv-python = "4.10.0.84"
pandas = "3.0.0"
numpy = "2.4.2"
scipy = "1.17.0"

# Database (if needed)
psycopg2-binary = "2.9.11"
sqlalchemy = "2.0.46"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^24.3"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
